# csv-translation-tool

./: .buildinfo  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  api.html  auth_app_model.html  auth_app_serializers.html  docker-compose.yml  genindex.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  requirements-dev.txt  requirements.txt  run.bat  run.sh  search.html  searchindex.js  translation_app_model.html  translation_app_serializers.html  translation_app_utils.html
.github/workflows/: ci.yml  client-ci.yml  docker-build.yml  docs.yml  model-ci.yml  rust-ci.yml  rust.yml  server-ci.yml  ts-ci.yml
_modules/: index.html
_modules/auth_app/: models.html  serializers.html
_modules/translation_app/: models.html
_sources/: auth_app_model.rst.txt  translation_app_serializers.rst.txt
client/: .eslintignore  .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
client/app/: layout.tsx  page.tsx
client/app/dashboard/: page.tsx
client/app/oauth-success/: page.tsx
client/components/: auth-button.tsx  cell-translation-dialog.tsx  client-toaster.tsx  column-list.tsx  column-selector.tsx  creator-info.tsx  csv-table.tsx  csv-uploader.tsx  data-translation-option.tsx  footer.tsx  language-popover.tsx  language-translation-option.tsx  loading-state.tsx  login-dialog.tsx  login-form.tsx  mode-toggle.tsx  navbar.tsx  oauth-buttons.tsx  register-form.tsx  row-range-selector.tsx  selected-column-badges.tsx  selection-actions.tsx  shortcuts-help-dialog.tsx  translation-buttons.tsx  translation-options.tsx  upload-confirmation-dialog.tsx
client/components/landing/: csv-preview-steps.tsx  csv-preview-visualisation.tsx  csv-preview.tsx  faq-section.tsx  features-section.tsx  hero-section.tsx  hero-text-content.tsx  landing-page.tsx
client/components/ui/: accordion.tsx  alert.tsx  breadcrumb.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  radio-group.tsx  resizable.tsx  select.tsx  sheet.tsx  sidebar.tsx  toast.tsx  toggle.tsx
client/data/: faqs.tsx  features.ts  languages.ts  shortcuts.ts  technologies.ts
client/hooks/: use-auth.tsx
client/lib/: types.ts
client/pages/api/: health.ts
client/public/data/: translations_map.json
client/src/: App.tsx
client/utils/: getLanguageInfo.ts  getLanguageName.ts  isSameLanguage.ts
docs/: CONTRIBUTIONS.md  ending-docs-pl.md  initial-docs-en.md  initial-docs.md
model/: Cargo.toml  Dockerfile  pyproject.toml
model/data/: translations_map.json
model/scripts/: allowed_langs.py  convert_pt_to_safetensors.py  convert_slow_tokenizer.py  convert_to_safetensors.py  convert_tokenizer.py  download_pytorch_model.py  prepare_convertion.py  requirements.txt  save_lang_pairs.py
model/src/: config.rs  lib.rs  main.rs  model.rs
model/src/new_translation/: cache.rs  config.rs  mod.rs  tagger.rs  translator.rs
model/src/translation/: cache.rs  detect_language.rs  language.rs  loader.rs  mod.rs  model.rs  tokenizer.rs  translation_map.rs  translator.rs
model/tests/: cache_tests.rs  config_tests.rs  detect_language_tests.rs  loader_tests.rs  model_fetch_tests.rs  model_tests.rs
server/: Dockerfile  entrypoint.sh  requirements.txt
server/auth_app/: apps.py  models.py  serializers.py  urls.py  views.py
server/auth_app/migrations/: 0003_remove_customgroup_group_ptr_and_more.py
server/auth_app/tests/: test_auth_serializers.py  test_auth_views.py
server/core/: settings.py  urls.py  wsgi.py
server/docs/: requirements.txt
server/docs/source/: auth_app_serializers.rst  conf.py  index.rst  translation_app_model.rst  translation_app_utils.rst
server/model/translator/: translate.py
server/translation_app/: apps.py  const.py  models.py  rust_loader.py  serializers.py  urls.py  utils.py  views.py
server/translation_app/tests/: test_translation_serializers.py  test_translation_views.py
src/client/: package-lock.json  package.json
src/client/app/: globals.css  layout.tsx  page.tsx
src/client/components/: cell-translation-dialog.tsx  column-list.tsx  column-selector.tsx  column-translation-option.tsx  creator-info.tsx  csv-table.tsx  csv-uploader.tsx  data-translation-option.tsx  footer.tsx  language-popover.tsx  language-translation-option.tsx  loading-state.tsx  login-dialog.tsx  (+12 more)
src/model/: Cargo.toml  pyproject.toml
src/model/src/: core.rs  lib.rs
src/model/src/translate/: lib.rs
src/model/src/utils/: language.rs
test_data/: comma-example.csv  example.csv  test1.csv
(+44 files in other folders)
