[package]
name = "translation_module"
version = "0.1.0"
edition = "2024"

[lib]
name = "translation_module"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
candle = { package = "candle-core", git = "https://github.com/huggingface/candle.git", version = "0.9.0", default-features = false }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle" }
tokenizers = "0.21.1"
hf-hub = "0.4.2"
pyo3 = { version = "0.20", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking", "gzip"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.37", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
