[package]
name = "translation_module"
version = "0.1.0"
edition = "2024"

[lib]
name = "translation_module"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
candle = { package = "candle-core", git = "https://github.com/huggingface/candle.git", version = "0.9.0", default-features = false }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle" }
tokenizers = "0.21.1"
hf-hub = "0.4.2"
pyo3 = { version = "0.20", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking", "gzip"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.37", features = ["derive"] }
serde_json = "1.0.140"
serde = "1.0.219"
base64 = "0.22.1"
lingua = { version = "1.7.1", default-features = false, features = ["arabic", "korean", "japanese", "chinese", "portuguese", "german", "english", "french", "italian", "spanish", "russian", "hindi", "indonesian", "polish", "dutch", "swedish", "thai", "turkish", "vietnamese"] }
md5 = "0.7.0"
redis = { version = "0.31.0", features = ["aio", "tokio-comp"]}
rayon = "1.10.0"
pyo3-asyncio = "0.20.0"
mockall = "0.13.1"
candle-examples = "0.9.1"
once_cell = "1.21.3"
futures-util = "0.3.31"


[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.maturin]
rustflags = ["-A", "warnings"]
