[package]
name = "model"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.0-alpha.5" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.0-alpha.5" }
hf-hub = "0.4.2"
tokenizers = "0.21.1"
