[package]
name = "model"
version = "0.1.0"
edition = "2024"

[lib]
name = "translate"
path = "src/translate/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.0-alpha.5" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.0-alpha.5" }
hf-hub = "0.4.2"
tokenizers = "0.21.1"
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
maturin = "0.15"
pep508_rs = "0.2.3"
rustls = "0.23.26"